# armies

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  go.mod  go.sum  main.go  mkdocs.yml  pyproject.toml  requirements-docs.txt
.github/: kube-linter-config.yaml
.github/workflows/: ci.yml  deploy-docs.yml  lint-k8s.yml
cmd/: eligible.go  eligible_test.go  init.go  init_test.go  record.go  record_test.go  research.go  research_test.go  root.go  root_test.go  roster.go  roster_test.go  seed.go  seed_test.go  spawn.go  spawn_test.go  test.go  test_test.go
docker/: Dockerfile  Dockerfile.docs  README.md  docker-compose.yaml  nginx-docs.conf
docs/: accountability.md  cli-reference.md  coordinator-guide.md  creating-profiles.md  getting-started.md  how-it-really-works.md  how-it-works.md  index.md  progression.md  security.md  team-templates.md  troubleshooting.md
docs/assets/: VISUAL-INDEX.md
docs/plans/: 2026-03-28-armies-test-design.md
examples/generals/: README.md  ada-lovelace.md  alan-turing.md  eisenhower.md  (+12 more)
k8s/: deployment.yaml  github-runner.yaml  ingressroute.yaml  service.yaml
rules/: competence-categories.yaml  eligibility.yaml  malus-schema.yaml  progression.yaml  rank-schema.yaml  role-taxonomy.yaml
schema/: profile-schema.yaml
teams/: firefighting.yaml  planning-session.yaml  quality-sprint.yaml  research-spike.yaml  standard.yaml
tests/: conftest.py  test_eligibility_edges.py  test_eligibility_float.py  test_frontmatter_update.py  test_profiles_validation.py  test_research_path.py  test_safe_dump.py  test_section_truncation.py  test_security.py  test_sync_lock.py  test_sync_safety.py  test_sync_url_validation.py
(+44 files in other folders)
